# playground

./: .bashrc  .gitignore  DEPLOYMENT.md  Dockerfile  GAPS.md  README.md  docker-compose.yml  dungeon_crawler_prd.md  et --hard ddc6744  manage.py  merged_context.py  nginx.conf  planning.md  pyproject.toml
app/: config.py  consummer.py  crud.py  database.py  main.py  models.py  schemas.py  worker.py
backend/api/: dependencies.py  main.py
backend/api/routes/v1/: crud.py  game.py
backend/core/: config.py  database.py  redis.py
backend/models/: players.py
backend/services/: auto_save.py  cache_warm.py  game_session.py  game_settings.py  player_cache.py
backend/services/translator/: config.py  translation_service.py
frontend/: README.md  game.html  index.html
game_internals/: events.py
game_internals/core/: builder.py  engine.py  main.py  phrases.py  print_utilities.py
game_internals/core/gameplay/combat_logic/: adventure.py
game_internals/core/gameplay/entities/: enemies.py  enemies_list.py  enemy.py  entities.py  entity.py  (+1 more)
game_internals/core/menu/: menu_terminal.py
game_internals/core/schemas/: game_settings.py  items.py
migrations/: env.py
migrations/versions/: 25f1dbe05a59_init_rebuild.py  a1b2c3d4e5f6_add_equipment_field_to_players.py
tests/: conftest.py  test_api_enqueue.py
tests/api/: conftest.py  test_game_endpoints.py
tests/game/: conftest.py  test_enemy.py  test_events.py  test_items_operations.py  test_player.py
tests/services/: conftest.py  test_cache_warm.py  test_game_settings.py  test_translator.py  test_translator_api.py
(+10 files in other folders)
